- BUG: the "Add" and "Add to ignore list" commands were
       shown even if there was no working copy. (Stefan)
- CHG: URL's are shown unescaped now, at least everywhere
       where they can't be edited. (Stefan)

Version 0.16
- BUG: The "open" command in the repository browser
       was always active, even for URL's which 
       can't be opened. (Stefan)
- BUG: Two more dialogs (Updates and Commit) were
       missing the new subversion statuses. (Stefan)
- BUG: The proxy parameters were stored under the wrong
       key in the registry. (Stefan)
- BUG: In Import, if no temporary files were found
       or all deselected then an error message
       was shown. (Stefan)
- BUG: In the log dialog if more than 500 files were
       changed in a revision then it showed "and 0 more"
       instead of the real remaining files. (Stefan)
- CHG: Changed the behaviour of the Log and Updates
       dialog if a network timeout occured. (Stefan)
- CHG: If the option "recursive overlays" is not set
       then the status for folders is always set to
       "normal" to speed things up a little. (Stefan)
- CHG: Added a timeout to the status cache. This
       is a workaround so that refreshing (pressing
       F5) isn't needed that much. (Stefan)
- CHG: Improved the status caching. (Stefan)
- CHG: if only the properties were modified then
       this is indicated by a "(P only)" in
       the status text in the commit dialog. (Stefan)
- ADD: The column provider uses now it's own status
       cache. (Stefan)
- ADD: Norwegian translation. (Jostein Andersen)

Version 0.15.2
- BUG: The "Check for updates" dialog could
       crash for unversioned items. (Stefan)
- BUG: Subversion got new statuses which I
       completely missed. (Stefan)
- BUG: in the changed dialog if an entry was selected
       but no menu entry chosen then the 
       OK button stayed disabled. (Stefan)
- BUG: It wasn't possible to add more than two files
       to the ignore list. (Stefan)