@@ -1,8 +1,8 @@
-#define FILEVER_INCVERSION        0,16,0,81
-#define PRODUCTVER_INCVERSION     0,16,0,81
-#define STRFILEVER_INCVERSION     "0, 16, 0, 81\0"
-#define STRPRODUCTVER_INCVERSION  "0, 16, 0, 81\0"
+#define FILEVER_INCVERSION        0,16,0,82
+#define PRODUCTVER_INCVERSION     0,16,0,82
+#define STRFILEVER_INCVERSION     "0, 16, 0, 82\0"
+#define STRPRODUCTVER_INCVERSION  "0, 16, 0, 82\0"
 #define TSVN_VERMAJOR             0
 #define TSVN_VERMINOR             16
 #define TSVN_VERMICRO             0
-#define TSVN_VERBUILD_INCVERSION  81
+#define TSVN_VERBUILD_INCVERSION  82
