@@ -2,6 +2,8 @@
        shown even if there was no working copy. (Stefan)
 - CHG: URL's are shown unescaped now, at least everywhere
        where they can't be edited. (Stefan)
+- ADD: The "Browse..." Button in the relocate dialog
+       works now. (Stefan)
 
 Version 0.16
 - BUG: The "open" command in the repository browser
